--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -45,6 +45,11 @@ h1 {
   margin: 0.67em 0;
 }
 
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 /* Grouping content
      ========================================================================== */
 
