--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -1,26 +1,28 @@
-/* src/pages/Movies/Movies.scss */
+@import "./../../styles/styles.scss";
+
 .movies {
   padding: 20px;
-}
 
-.sort-filter {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 10px;
-}
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 60px;
+    margin-bottom: 44px;
 
-.movie-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.pagination button {
-  margin: 0 5px;
-  padding: 5px 10px;
+    &__results {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      &--term {
+        font-size: $font_size_2;
+        color: $white;
+        font-weight: 600;
+      }
+      &--number {
+        font-size: $font_size_4;
+        color: $gray;
+      }
+    }
+  }
 }
