Improve: sabe term to localstorage + 'noresults' css improve

--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -1,7 +1,9 @@
 @import "./../../styles/styles.scss";
 
 .movies {
-  padding: 20px;
+  .search__noresults {
+    margin-top: 60px;
+  }
 
   &__header {
     display: flex;
