--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -28,7 +28,11 @@
   }
 
   &__noresults {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+
     p {
       color: $white;
       font-size: $font_size_5;
