--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -15,6 +15,10 @@
     border-radius: 12px;
   }
 
+  .noimage {
+    object-fit: contain;
+  }
+
   &__info {
     display: flex;
     flex-direction: column;
