--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -24,9 +24,25 @@
     color: $primary;
   }
 
+  .disabled {
+    position: relative;
+    pointer-events: none;
+
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: rgba($color: $black, $alpha: 0.5);
+    }
+  }
+
   .arrow--left {
     transform: rotate(90deg);
   }
+
   .arrow--right {
     transform: rotate(-90deg);
   }
